2008-02-10  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* gtk/gtkrecentaction.c: Propagate local-only.  (#511987,
	Jonh Wendell)

2008-02-08  Richard Hult  <richard@imendio.com>

	Merge from trunk:

	* gdk/quartz/gdkevents-quartz.c (gdk_event_translate): Ignore the
	delta from the NSEvent for now, generating multiple scroll events
	results in a lot of events getting queued up and things get really
	slow.

2008-02-08  Sven Herzberg  <sven@imendio.com>

	Merge from trunk:

	Adjust the code to match the documentation, examples, "common sense"
	and existing applications.

	* gtk/gtkaction.c: (_gtk_action_sync_menu_visible): take into account
	that a GtkMenu for a <popup> element doesn't have to have a GtkAction
	assigned

2008-02-06  Cody Russell  <bratsche@gnome.org>

	Merge from trunk:

	* gdk/win32/gdkevents-win32.c: Check if the window is a temp window,
	otherwise things get wonky when you click on a menu.  This fixes
	a regression caused in #505928.  Thanks to Tor for spotting this
	one!  (#514789)

2008-02-05  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* gtk/gtkprintsettings.c (gtk_print_settings_get_page_ranges):
	Allow to store half-open ranges.

2008-02-05  Federico Mena Quintero  <federico@novell.com>

	Don't focus the file list when shortcuts get activated.  This
	removes a lot of ambiguity in when the file selection should
	change, and makes the overall code flow simpler.

	This fixes http://bugzilla.gnome.org/show_bug.cgi?id=419737 -
	file/save dialog clears the filename entry when changing
	directories.

	Also fixes http://bugzilla.gnome.org/show_bug.cgi?id=499940 -
	focus should not go to the file list when a shortcut is activated.

	* gtk/gtkfilechooserdefault.c
	(shortcuts_activate_volume_mount_cb): Don't focus the file list
	(shortcuts_activate_get_info_cb): Likewise.

2008-02-05  Federico Mena Quintero  <federico@novell.com>

	Don't focus the file list when shortcuts get activated.  This