@@ -1,3 +1,15 @@
+2008-02-11  Emmanuele Bassi  <ebassi@gnome.org>
+
+	Merge from trunk:
+
+	* gtk/gtkrecentchoosermenu.c:
+	(gtk_recent_chooser_menu_constructor): Set no-show-all flag
+	on the placeholder menu item.
+
+	* tests/testrecentchoosermenu.c: 
+	(create_recent_chooser_menu): Use gtk_widget_show_all() to test
+	whether the placeholder menu item gets shown.
+
 2008-02-10  Matthias Clasen  <mclasen@redhat.com>
 
 	Merge from trunk:
